# CMakeCUDA

./: CMakeLists.txt  a.out  vectorAdd
